attachment 99328 [details] from Bug 78883 correctly loads with LibO 3.5.7.2 but hangs with LibO 4.0.4.2 (I do not have earlier 4.0.x versions to test) I file this as a separate bug because of https://bugs.freedesktop.org/show_bug.cgi?id=78883#c9
bug reproduced under Win7x64 and Linux (see comments in Bug 78883)
Created attachment 99381 [details] File for which this issue can be reproduced
bibisected: 56de98328b5e6e28aae1f5a8574c4d6500abdf82 is the first bad commit commit 56de98328b5e6e28aae1f5a8574c4d6500abdf82 Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com> Date: Mon Dec 10 14:11:19 2012 +0000 source-hash-5f91f8a368343d8921a01edb7359cd300892f09d commit 5f91f8a368343d8921a01edb7359cd300892f09d Author: Michael Stahl <mstahl@redhat.com> AuthorDate: Thu Sep 20 23:59:14 2012 +0200 Commit: Michael Stahl <mstahl@redhat.com> CommitDate: Fri Sep 21 18:05:02 2012 +0200 fdo#48692: fix problems with large number of table cells: The SwTableSortBoxes is now a STL container which can have more than 2^16 elements but unfortunately there are a lot of 16 bit integers used to index it all over the place, causing infinite loops and possibly worse problems; fix that to use size_t. Change-Id: I868ec9dd0629be4fbe4d6b8f294fb765e3d662ec :100644 100644 49251f9d0d9ad42539c025f06a312edf63e0b41d ade56ffa53ad3371a1f38ff90c049ca9fff3124c M ccache.log :100644 100644 683966615e12c7b0a8993adef9a738759e4faca1 c71c7827fea67a54b6998770deb6baeaaf27f71e M commitmsg :100644 100644 a4aa952a0ad0e855345b715c8e45251d33d44dba 30e3631306f2434cdbee7f5432b0f41a37a8c1d5 M dev-install.log :100644 100644 f5770dac159934eaa657aff7a3555ca4e47f58f4 c96c2314caf0fd707e2aae474fae9028fc06980a M make.log :040000 040000 4afde4b72a0a3d21e49d8028e71372ab39154161 67cb07852d7501220fdf4d03efa58cb01d11cb26 M opt # bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e # good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932 git bisect start 'latest' 'oldest' # bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574 # good: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15 git bisect good 8f4aeaad2f65d656328a451154142bb82efa4327 # bad: [9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02] source-hash-8600bc24bbc9029e92bea6102bff2921bc10b33e git bisect bad 9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02 # bad: [51b63dca7427db64929ae1885d7cf1cc7eb0ba28] source-hash-806d18ae7b8c241fe90e49d3d370306769c50a10 git bisect bad 51b63dca7427db64929ae1885d7cf1cc7eb0ba28 # bad: [446a69834acf747d9d18841ec583512ae8fa42e7] source-hash-06a8ca9339f02fccf6961c0de77c49673823b35f git bisect bad 446a69834acf747d9d18841ec583512ae8fa42e7 # good: [d2720e99b9e6cb7b099256cc7a6d2b3f907b8d7c] source-hash-7dd6c0a8372810f48e6bee35a11ac4ad0432640b git bisect good d2720e99b9e6cb7b099256cc7a6d2b3f907b8d7c # good: [3c228d4685e2981ece0e69cb774dabbef443f77c] source-hash-e63bba0013e5ce34cd04559632206bb7c891eebe git bisect good 3c228d4685e2981ece0e69cb774dabbef443f77c # good: [cd18cb7f47f7e956c6d19bd0f31a6e30d1173b29] source-hash-558476135865d9ae7b8801a82c177fd1098386ff git bisect good cd18cb7f47f7e956c6d19bd0f31a6e30d1173b29 # bad: [56de98328b5e6e28aae1f5a8574c4d6500abdf82] source-hash-5f91f8a368343d8921a01edb7359cd300892f09d git bisect bad 56de98328b5e6e28aae1f5a8574c4d6500abdf82 # good: [cca0c04dccc1fb2827c929ff2ced5bdb80f915bc] source-hash-179a6db61ee30cf776747802f06edeef45fec461 git bisect good cca0c04dccc1fb2827c929ff2ced5bdb80f915bc # first bad commit: [56de98328b5e6e28aae1f5a8574c4d6500abdf82] source-hash-5f91f8a368343d8921a01edb7359cd300892f09d
(In reply to comment #3) Thanks a lot !!!
Vinaya Mandke committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=e49d2b31fb2020d065b4ad940d1031d07b10f32b fdo#78939 [DOCX] Hang while opening due to incorrect modification of Style The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Vinaya Mandke committed a patch related to this issue. It has been pushed to "libreoffice-4-3": http://cgit.freedesktop.org/libreoffice/core/commit/?id=933545f9bee6ed8d791ee4026cc0986702417ed8&h=libreoffice-4-3 fdo#78939 [DOCX] Hang while opening due to incorrect modification of Style It will be available in LibreOffice 4.3.1. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Migrating Whiteboard tags to Keywords: (bibisected) [NinjaEdit]