fdo#78939 [DOCX] Hang while opening due to incorrect modification of Style

http://opengrok.libreoffice.org/xref/core/sw/source/core/unocore/unosett.cxx#1884
Modifies the refernced style of the numbering rule to use the current numbering rule.
Actually the refernced style is not supposed to be modified.
As the numbering level formatonly uses that properties particular style,
which may or may not be a numbering style

For this Particular document the numbering format refers the "Default Style" (Normal).
Almost all of the styles in style.xml are based on it. Normal was modified,
and as a result the whole document was bulletized; Which caused the hang while opening

Removed the addition of style as a PARA_STYLE, as the properties of the
refernced style are already added in ListLevel::AddParaProperties

Conflicts:
	sw/qa/extras/ooxmlimport/ooxmlimport.cxx

Reviewed on:
	https://gerrit.libreoffice.org/9668

Change-Id: I8cc143805a38613908d2e2cb4827882d4cf40a78